# user_app

./: .gitignore  pyproject.toml
docker/: docker-compose.yml
src/user_app/: app.py  classes.py  db.py  models.py  userstore.py
src/user_app/static/: style.css
src/user_app/templates/: base.html  index.html  login.html  register.html  user.html
tests/: test_user.py  test_userstore.py
